Added new DebugList Activity

--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -78,7 +78,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:foreground="@drawable/button_background" >
+            android:foreground="@drawable/button_background">
+
+            <ImageButton
+                android:id="@+id/debugger"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/grey"
+                android:backgroundTint="@color/grey"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_port_keyboard"
+                tools:ignore="ContentDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
