Removed all button from Touchpad.

--- a/app/src/main/res/layout/fragment_touchpad.xml
+++ b/app/src/main/res/layout/fragment_touchpad.xml
@@ -6,69 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.Touchpad">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/touchpad"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="5"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:foreground="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="bottom"
-            android:layout_weight="1.5"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <Button
-                android:id="@+id/btnLeft"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.125"
-                android:foreground="@drawable/button_background"
-                tools:ignore="NestedWeights,SpeakableTextPresentCheck" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/wheel"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.75"
-                android:background="@color/black">
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <Button
-                android:id="@+id/btnRight"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.125"
-                android:foreground="@drawable/button_background"
-                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-        </LinearLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/hWheel"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"
-            android:foreground="@drawable/scrollbar_col">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/touchpad"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:foreground="@drawable/button_background"/>
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
